LATTICE-2405 change property tags from LinkedHashMultimap to LinkedHashMap