@@ -18,15 +18,11 @@
 
 package com.openlattice.mapstores;
 
-import com.google.common.collect.HashMultimap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.LinkedHashMultimap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
-import com.google.common.collect.Multimaps;
-import com.google.common.collect.SetMultimap;
 import com.google.common.collect.Sets;
 import com.openlattice.IdConstants;
 import com.openlattice.authorization.*;
@@ -76,17 +72,7 @@ import org.apache.olingo.commons.api.edm.EdmPrimitiveTypeKind;
 import org.apache.olingo.commons.api.edm.FullQualifiedName;
 
 import java.time.OffsetDateTime;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.EnumSet;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashSet;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Random;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -214,10 +200,11 @@ public final class TestDataFactory {
                 ? Arrays.asList( keys ).stream().map( PropertyType::getId )
                 .collect( Collectors.toCollection( Sets::newLinkedHashSet ) )
                 : Sets.newLinkedHashSet( Arrays.asList( UUID.randomUUID(), UUID.randomUUID(), UUID.randomUUID() ) );
-        var propertyTags = LinkedHashMultimap.<UUID, String>create();
+        var propertyTags = new LinkedHashMap<UUID, LinkedHashSet<String>>( k.size() );
 
         for ( UUID id : k ) {
-            propertyTags.put( id, "PRIMARY KEY TAG" );
+            propertyTags.put( id, new LinkedHashSet<>() );
+            propertyTags.get( id ).add( "PRIMARY KEY TAG" );
         }
 
         SecurableObjectType entityTypeCategory = ( category == null ) ? SecurableObjectType.EntityType : category;
@@ -536,12 +523,12 @@ public final class TestDataFactory {
         Map<UUID, Map<UUID, Set<Object>>> data = new HashMap<>();
         for ( int i = 0; i < numberOfEntries; i++ ) {
             UUID entityId = UUID.randomUUID();
-            SetMultimap<UUID, Object> entity = HashMultimap.create();
+            Map<UUID, Set<Object>> entity = Maps.newHashMapWithExpectedSize( propertyIds.size() );
             for ( UUID propertyId : propertyIds ) {
-                entity.put( propertyId, randomAlphanumeric( 5 ) );
+                entity.put( propertyId, Set.of( randomAlphanumeric( 5 ) ) );
             }
 
-            data.put( entityId, Multimaps.asMap( entity ) );
+            data.put( entityId, entity );
         }
         return data;
     }
@@ -555,8 +542,9 @@ public final class TestDataFactory {
     }
 
     public static EntityType entityTypesFromKeyAndTypes( PropertyType key, PropertyType... propertyTypes ) {
-        final var propertyTags = LinkedHashMultimap.<UUID, String>create();
-        propertyTags.put( key.getId(), "PRIMARY KEY TAG" );
+        final var propertyTags = new LinkedHashMap<UUID, LinkedHashSet<String>>();
+        propertyTags.put( key.getId(), new LinkedHashSet<>() );
+        propertyTags.get( key.getId() ).add( "PRIMARY KEY TAG" );
         return new EntityType( UUID.randomUUID(),
                 fqn(),
                 randomAlphanumeric( 5 ),
@@ -594,20 +582,24 @@ public final class TestDataFactory {
     }
 
     public static Map<UUID, Set<Object>> randomElement( UUID keyType, UUID binaryType ) {
-        SetMultimap<UUID, Object> element = HashMultimap.create();
-        element.put( keyType, random( 5 ) );
-        element.put( binaryType,
-                ImmutableMap.of( "content-type", "application/octet-stream", "data", RandomUtils.nextBytes( 128 ) ) );
-        element.put( binaryType,
-                ImmutableMap.of( "content-type", "application/octet-stream", "data", RandomUtils.nextBytes( 128 ) ) );
-        element.put( binaryType,
-                ImmutableMap.of( "content-type", "application/octet-stream", "data", RandomUtils.nextBytes( 128 ) ) );
-        return Multimaps.asMap( element );
+        return Map.of(
+                keyType,
+                Set.of( random( 5 ) ),
+                binaryType,
+                Set.of(
+                        ImmutableMap.of( "content-type", "application/octet-stream", "data",
+                                RandomUtils.nextBytes( 128 ) ),
+                        ImmutableMap.of( "content-type", "application/octet-stream", "data",
+                                RandomUtils.nextBytes( 128 ) ),
+                        ImmutableMap.of( "content-type", "application/octet-stream", "data",
+                                RandomUtils.nextBytes( 128 ) )
+                ) );
     }
 
     public static MetadataUpdate metadataUpdate() {
-        final var propertyTags = LinkedHashMultimap.<UUID, String>create();
-        propertyTags.put( UUID.randomUUID(), "SOME PROPERTY TAG" );
+        final var propertyTags = new LinkedHashMap<UUID, LinkedHashSet<String>>();
+        propertyTags.put( UUID.randomUUID(), Sets.newLinkedHashSet( Set.of( "SOME PROPERTY TAG" ) ) );
+
         return new MetadataUpdate( Optional.of( randomAlphanumeric( 5 ) ),
                 Optional.of( randomAlphanumeric( 5 ) ),
                 Optional.empty(),
@@ -628,7 +620,7 @@ public final class TestDataFactory {
     }
 
     public static SearchConstraints simpleSearchConstraints() {
-        return SearchConstraints.simpleSearchConstraints( new UUID[] { UUID.randomUUID() },
+        return SearchConstraints.simpleSearchConstraints( new UUID[]{ UUID.randomUUID() },
                 r.nextInt( 1000 ),
                 r.nextInt( 1000 ),
                 randomAlphanumeric( 10 ) );
